Add p, ul, & li tags

--- a/project-practice.html
+++ b/project-practice.html
@@ -6,9 +6,21 @@
 </head>
 <body>
   <h1>Independant Project Practice</h1>
-  
+  <h2> Project Objectives to Practice:</h2>
 
-
+  <p>The Project will be posted on Thursday morning at 8am and should be submitted by Sunday, June 6th before 8am. As long as you check off the list of Objectives listed below you will recieve a passing grade.</p>
+  <ul>
+    <li>{"The following HTML tags are all used"=>"p, h, ul, ol, li, em, strong, a, img, div, and span."}</li>
+    <li>Project includes a custom-made stylesheet that uses cascading, the box model, and floats.</li>
+    <li>Commits are made regularly with clear messages that finish the phrase 'It will...'</li>
+    <li>Complete a minimum of 4 hours of work</li>
+    <li>The project repo contains a README that includes: author name, project name, description, setup instructions, link to GitHub Pages, and copyright info.</li>
+    <li>Site is successfully deployed to GitHub pages.</li>
+    <li>Project is in a polished, portfolio-quality state.</li>
+    <li>Required content was in place by the deadline.</li>
+    <li>Project demonstrates understanding of this week's concepts. If prompted, you can discuss your code with an instructor using the correct terminology.</li>
+    <li>Code is clean, well-refactored, and easy-to-read. This includes correct indentation, spacing, and including only necessary comments and debugging tools.</li>
+  </ul>
 
 </body>
 </html>
