--- a/project-practice.html
+++ b/project-practice.html
@@ -6,11 +6,14 @@
 </head>
 <body>
   <h1>Independant Project Practice</h1>
+  <img src="img/coding1.jpg" alt="Coding">
+
   <h2> Project Objectives to Practice:</h2>
 
   <p>The Project will be posted on Thursday morning at 8am and should be submitted by Sunday, June 6th before 8am. As long as you check off the list of Objectives listed below you will recieve a passing grade.</p>
   <ul>
-    <li>{"The following HTML tags are all used"=>"p, h, ul, ol, li, em, strong, a, img, div, and span."}</li>
+  
+      <li>{"The following HTML tags are all used"=>"p, h, ul, ol, li, em, strong, a, img, div, and span."}</li> 
     <li>Project includes a custom-made stylesheet that uses cascading, the box model, and floats.</li>
     <li>Commits are made regularly with clear messages that finish the phrase 'It will...'</li>
     <li>Complete a minimum of 4 hours of work</li>
